--- a/index.html
+++ b/index.html
@@ -152,31 +152,31 @@
 
   
 
+
 <div class="crypto-tips" style="margin-top: 2em;">
   <h2 style="font-size: 1.2em;">🪙 Tip Me in Crypto</h2>
 
-  <div style="margin: 1em 0;">
-    <strong>🟠 Bitcoin</strong><br>
-    <code id="btcAddress" style="font-size: 0.9em;">bc1q8j2sgjuytjwvhrjtnek9vueg8vdk7m0wytr8vw</code><br>
-    <button onclick="copyToClipboard('bc1q8j2sgjuytjwvhrjtnek9vueg8vdk7m0wytr8vw')" style="margin: 0.25em; padding: 0.5em 1em;">📋 Copy</button>
-    <button onclick="toggleQR('btcQR')" style="margin: 0.25em; padding: 0.5em 1em;">🔗 Show QR</button><br>
-    <img id="btcQR" src="bitcoin_qr.png" style="display:none; margin-top: 0.5em; width: 140px;">
-  </div>
+  <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1.5em;">
+    <div style="text-align: center;">
+      <strong>🟠 Bitcoin</strong><br>
+      <img id="btcQR" src="bitcoin_qr.png" style="display:none; margin:0.5em auto; width:100px;"><br>
+      <button onclick="copyToClipboard('bc1q8j2sgjuytjwvhrjtnek9vueg8vdk7m0wytr8vw')" style="margin: 0.2em; padding: 0.4em 1em;">📋 Copy</button>
+      <button onclick="toggleQR('btcQR')" style="margin: 0.2em; padding: 0.4em 1em;">🔗 QR</button>
+    </div>
 
-  <div style="margin: 1em 0;">
-    <strong>🟣 Ethereum</strong><br>
-    <code id="ethAddress" style="font-size: 0.9em;">0x6ff1725E66703808d23B7275979Ebe5F299219B7</code><br>
-    <button onclick="copyToClipboard('0x6ff1725E66703808d23B7275979Ebe5F299219B7')" style="margin: 0.25em; padding: 0.5em 1em;">📋 Copy</button>
-    <button onclick="toggleQR('ethQR')" style="margin: 0.25em; padding: 0.5em 1em;">🔗 Show QR</button><br>
-    <img id="ethQR" src="ethereum_qr.png" style="display:none; margin-top: 0.5em; width: 140px;">
-  </div>
+    <div style="text-align: center;">
+      <strong>🟣 Ethereum</strong><br>
+      <img id="ethQR" src="ethereum_qr.png" style="display:none; margin:0.5em auto; width:100px;"><br>
+      <button onclick="copyToClipboard('0x6ff1725E66703808d23B7275979Ebe5F299219B7')" style="margin: 0.2em; padding: 0.4em 1em;">📋 Copy</button>
+      <button onclick="toggleQR('ethQR')" style="margin: 0.2em; padding: 0.4em 1em;">🔗 QR</button>
+    </div>
 
-  <div style="margin: 1em 0;">
-    <strong>🔵 Solana</strong><br>
-    <code id="solAddress" style="font-size: 0.9em;">6kKSTsZBkAKtPkRzStT8e1Vc9fgitPmXgC6ZgN4t5bDs</code><br>
-    <button onclick="copyToClipboard('6kKSTsZBkAKtPkRzStT8e1Vc9fgitPmXgC6ZgN4t5bDs')" style="margin: 0.25em; padding: 0.5em 1em;">📋 Copy</button>
-    <button onclick="toggleQR('solQR')" style="margin: 0.25em; padding: 0.5em 1em;">🔗 Show QR</button><br>
-    <img id="solQR" src="solana_qr.png" style="display:none; margin-top: 0.5em; width: 140px;">
+    <div style="text-align: center;">
+      <strong>🔵 Solana</strong><br>
+      <img id="solQR" src="solana_qr.png" style="display:none; margin:0.5em auto; width:100px;"><br>
+      <button onclick="copyToClipboard('6kKSTsZBkAKtPkRzStT8e1Vc9fgitPmXgC6ZgN4t5bDs')" style="margin: 0.2em; padding: 0.4em 1em;">📋 Copy</button>
+      <button onclick="toggleQR('solQR')" style="margin: 0.2em; padding: 0.4em 1em;">🔗 QR</button>
+    </div>
   </div>
 </div>
 
