--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Fart Ticker💨</title>
+  <title>Fart Ticker📈💨</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <style>
     :root {
@@ -111,7 +111,7 @@
 </head>
 <body data-theme="dark">
 
-  <h1>Fart Ticker 💨</h1>
+  <h1>Fart Ticker📈💨</h1>
   <div id="description">This page turns crypto price changes into fart sounds.</div>
   <div id="tagline"></div>
 
