--- a/index.html
+++ b/index.html
@@ -152,9 +152,9 @@
   <h2 style="font-size: 1.2em;">🪙 Tip Me in Crypto</h2>
 
   <div style="display: flex; flex-wrap: wrap; justify-content: center; gap: 1em;">
-    <button onclick="copyToClipboard('bc1q8j2sgjuytjwvhrjtnek9vueg8vdk7m0wytr8vw')" style="padding: 0.6em 1.2em; background: #f7931a; color: white; border: none; border-radius: 6px; cursor: pointer;">🟠 Copy Bitcoin ID</button><a href="https://cb.id/fartticker" target="_blank"><button style="margin: 0.2em; padding: 0.4em 1.2em; background: #8e44ad; color: white; border: none; border-radius: 6px; cursor: pointer;">🪙 Tip Me in Wallet</button></a>
-    <button onclick="copyToClipboard('0x6ff1725E66703808d23B7275979Ebe5F299219B7')" style="padding: 0.6em 1.2em; background: #627eea; color: white; border: none; border-radius: 6px; cursor: pointer;">🟣 Copy Ethereum ID</button><a href="https://cb.id/fartticker" target="_blank"><button style="margin: 0.2em; padding: 0.4em 1.2em; background: #8e44ad; color: white; border: none; border-radius: 6px; cursor: pointer;">🪙 Tip Me in Wallet</button></a>
-    <button onclick="copyToClipboard('6kKSTsZBkAKtPkRzStT8e1Vc9fgitPmXgC6ZgN4t5bDs')" style="padding: 0.6em 1.2em; background: #66f9a1; color: black; border: none; border-radius: 6px; cursor: pointer;">🔵 Copy Solana ID</button><a href="https://cb.id/fartticker" target="_blank"><button style="margin: 0.2em; padding: 0.4em 1.2em; background: #8e44ad; color: white; border: none; border-radius: 6px; cursor: pointer;">🪙 Tip Me in Wallet</button></a>
+    <button onclick="copyToClipboard('bc1q8j2sgjuytjwvhrjtnek9vueg8vdk7m0wytr8vw')" style="padding: 0.6em 1.2em; background: #f7931a; color: white; border: none; border-radius: 6px; cursor: pointer;">🟠 Copy Bitcoin ID</button>
+    <button onclick="copyToClipboard('0x6ff1725E66703808d23B7275979Ebe5F299219B7')" style="padding: 0.6em 1.2em; background: #627eea; color: white; border: none; border-radius: 6px; cursor: pointer;">🟣 Copy Ethereum ID</button>
+    <button onclick="copyToClipboard('6kKSTsZBkAKtPkRzStT8e1Vc9fgitPmXgC6ZgN4t5bDs')" style="padding: 0.6em 1.2em; background: #66f9a1; color: black; border: none; border-radius: 6px; cursor: pointer;">🔵 Copy Solana ID</button>
   </div>
 </div>
 
