--- a/index.html
+++ b/index.html
@@ -129,7 +129,6 @@
   </div>
 
   <div class="controls">
-    <button onclick="setAsset(currentAsset)">🔄 Refresh</button>
     <button id="pitchToggle" onclick="togglePitch()">💃 For the Ladies</button>
   </div>
 
@@ -159,22 +158,13 @@
   </div>
 </div>
 
-  <div class="share"
- style="margin-top: 2em;">
-    <button onclick="share('twitter')">Share on Twitter</button>
-    <button onclick="share('facebook')">Share on Facebook</button>
-    <button onclick="share('reddit')">Share on Reddit</button>
-    <button onclick="copyLink()">📎 Copy Website Link</button>
-  </div>
-
   
-<div style="margin-top: 2em;">
-  <p style="font-size: 0.95em;">Be the first to hear the fart 💨</p>
-  <a href="https://forms.gle/v6xXgtWPmUYCk9m28" target="_blank">
-    <button style="padding: 0.6em 1.2em; background: #00d084; color: black; border: none; border-radius: 6px; cursor: pointer;">
-      ✉️ Sign Up for Email Updates
-    </button>
-  </a>
+<div class="share" style="margin-top: 2em;">
+  <p style="font-size: 0.95em; margin-bottom: 0.5em;">Share Fart Ticker 💨 with your people:</p>
+  <button onclick="share('twitter')" style="margin: 0.25em; padding: 0.6em 1.2em; background: #1DA1F2; color: white; border: none; border-radius: 6px; cursor: pointer;">🐦 Twitter</button>
+  <button onclick="share('facebook')" style="margin: 0.25em; padding: 0.6em 1.2em; background: #4267B2; color: white; border: none; border-radius: 6px; cursor: pointer;">📘 Facebook</button>
+  <button onclick="share('reddit')" style="margin: 0.25em; padding: 0.6em 1.2em; background: #FF4500; color: white; border: none; border-radius: 6px; cursor: pointer;">👽 Reddit</button>
+  <button onclick="copyLink()" style="margin: 0.25em; padding: 0.6em 1.2em; background: gray; color: white; border: none; border-radius: 6px; cursor: pointer;">📎 Copy Link</button>
 </div>
 
   <footer style="margin-top:3em; font-size:0.8em; color:gray;">
