--- a/index.html
+++ b/index.html
@@ -167,6 +167,16 @@
   <button onclick="copyLink()" style="margin: 0.25em; padding: 0.6em 1.2em; background: gray; color: white; border: none; border-radius: 6px; cursor: pointer;">📎 Copy Link</button>
 </div>
 
+  
+<div style="margin-top: 2em;">
+  <p style="font-size: 0.95em;">Be the first to hear the fart 💨</p>
+  <a href="https://forms.gle/v6xXgtWPmUYCk9m28" target="_blank">
+    <button style="padding: 0.6em 1.2em; background: #00d084; color: black; border: none; border-radius: 6px; cursor: pointer;">
+      ✉️ Sign Up for Email Updates
+    </button>
+  </a>
+</div>
+
   <footer style="margin-top:3em; font-size:0.8em; color:gray;">
     © FartTicker.com 2025 💨 All rights reserved.
   </footer>
