--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
 </div>
 
 
-  <div id="prices"><p>Loading...</p></div>
+  <div id="prices"></div>
 
   <div style="margin: 0.4em 0;">
     <button id="play" onclick="playStretched()">▶️ Play the Price Change</button>
